--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-    <%= yield %>
+  <%= render 'layouts/navbar' %>
+  <div id="page-content">
+  <%= yield %>
+  </div>
+  <%= render 'layouts/footer' %>
   </body>
 </html>
