--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= teacher.experience %></td>
         <td><%= teacher.date_of_birth %></td>
         <td><%= teacher.gender %></td>
-        <td><%= teacher.student_id %></td>
+        <td><%= teacher.student %></td>
         <td><%= link_to 'Show', teacher %></td>
         <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
         <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
